hsreplaynet/static/styles/components.scss
/* ... */
.pagination {
	> li {
		&.active > a {
			&,
			&:focus,
			&:hover {
				color: white;
				background-color: $lighterblue;
				border-color: $lighterblue;
			}
		}

		> a,
		> span {
			margin-left: 6px;
			margin-right: 6px;
			text-align: center;
			background-color: #f9f9f9;

			&.fixed-width {
				width: 45px;
				padding-left: 0;
				padding-right: 0;
			}

			.space-right {
				margin-right: 5px;
			}

			.space-left {
				margin-left: 5px;
			}
		}

		&:first-child {
			> a,
			> span {
				border-radius: 0;
				margin-left: 0;
			}
		}

		&:last-child {
			> a,
			> span {
				border-radius: 0;
				margin-right: 0;
			}
		}

		> a {
			color: black;
			border-color: black;

			&:hover,
			&:focus {
				color: white;
				border-color: $lightblue;
				background-color: $lightblue;
			}
		}

		> span.transparent-background {
			color: black;
			cursor: default;

			&,
			&:hover {
				color: black;
				background-color: transparent;
				border: none;
			}
		}
	}
}

.player-class {
	background-repeat: no-repeat;
	background-size: contain;
	padding: 5px 0 5px 35px;

	&.druid {
		background-image: url(/static/images/64x/class-icons/druid.png);
	}
	&.hunter {
		background-image: url(/static/images/64x/class-icons/hunter.png);
	}
	&.mage {
		background-image: url(/static/images/64x/class-icons/mage.png);
	}
	&.paladin {
		background-image: url(/static/images/64x/class-icons/paladin.png);
	}
	&.priest {
		background-image: url(/static/images/64x/class-icons/priest.png);
	}
	&.rogue {
		background-image: url(/static/images/64x/class-icons/rogue.png);
	}
	&.shaman {
		background-image: url(/static/images/64x/class-icons/shaman.png);
	}
	&.warlock {
		background-image: url(/static/images/64x/class-icons/warlock.png);
	}
	&.warrior {
		background-image: url(/static/images/64x/class-icons/warrior.png);
	}
}

.class-matchup {
	padding: 15px;

	.class-matchup-header {
		background: $blue;
		color: white;
		font-weight: bold;
		padding-right: 5px;

		.player-class {
			margin-left: -5px;
		}
	}

	.class-matchup-archetype {
		border-bottom: 1px solid lightgray;
		color: black;
		display: block;
		padding: 5px 5px 0 5px;
	}

	.class-matchup-archetype:hover,
	.class-matchup-archetype:active {
		text-decoration: unset;
		background: #f1f2f4;
	}

	.class-matchup-archetype:visited {
		color: black;
	}
}

.box {
	border: 1px solid black;
	color: black;
	cursor: pointer;
	display: flex;
	flex-direction: column;
	height: 250px;
	margin-bottom: 20px;
	text-align: center;
	text-decoration: none;

	&:hover,
	&:active,
	&:link {
		color: black;
		text-decoration: none;
	}

	&:hover {
		background: #f1f2f4;
	}

	.box-title {
		// font-weight: bold;
		text-transform: uppercase;
		font-size: 1.3em;
		text-align: center;
		border-bottom: 1px solid black;
		background: $blue;
		color: white;
		padding: 5px 0;
	}

	.box-content {
		display: flex;
		justify-content: center;
		flex-direction: column;
		flex-grow: 1;

		> h2 {
			margin-top: 0;
		}

		> h3 {
			margin-top: 0;
		}
	}

	.box-chart {
		height: 50px;
	}

	.box-data {
		font-size: 1.5em;

		.winrate {
			font-weight: bold;
			padding-right: 10px;
		}
	}

	.stats-table {
		font-size: 1.5em;
		display: flex;
		justify-content: center;
		padding-top: 15px;

		th {
			padding-right: 10px;
		}
	}

	&.matchup-box {
		.player-class {
			padding-left: 50px;
			font-size: 1.8em;
		}
	}

	&.deck-box {
		.tech-cards {
			margin: 0 25px;
			display: flex;
			justify-content: space-around;
		}
	}

	&.rank-box {
		.rank-icon {
			width: 100px;
			height: 100px;
			margin: 0 auto;
		}
	}

	&.class-box {
		.box-title {
			text-transform: none;
			text-align: left;
			padding: 1px 1px 2px 1px;
			z-index: 1;
			font-size: 1.2em;
			font-weight: bold;

			.player-class {
				margin-left: -12px;
				padding: 7px 0 7px 45px;
			}
		}
	}
}

.class-box-container {
	padding: 10px;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;

	@media (max-width: 500px) {
		padding: 10px 15px;
	}

	.table-container {
		margin: 1px;
	}

	.class-box {
		height: auto;
		cursor: unset;
		flex-basis: calc(33% - 20px);
		margin: 10px;
		min-width: 450px;
		flex-grow: 1;

		@media (max-width: 500px) {
			min-width: 100%;
		}

		&:hover {
			background: unset;
		}
	}

	.box-content {
		justify-content: unset;
	}

	.table-row-header {
		line-height: 36px;
		overflow: hidden;
		padding: 0 4px;
		text-align: left;
		text-overflow: ellipsis;
		white-space: nowrap;
		a {
			color: black;
		}
	}

	.row {
		padding-top: 20px;
		display: flex;
		flex-direction: row;
	}

	.col {
		flex: 1 100%;
	}
}

.rank-range-filter-ranks {
	> .infobox-filter-group {
		li {
			display: flex;
			flex-direction: row;
			justify-content: space-between;
			align-items: center;
			padding: 0 0 0 1em;

			> span {
				padding: 0.5em 0;
			}

			button {
				border-right: black solid 1px;

				&:first-child {
					border-left: black solid 1px;
				}
			}
		}
	}
}
/* ... */

